# medical-triage-llm-finetuning

./: .dockerignore  .gitignore  Dockerfile  RAPPORT_TECHNIQUE.md  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: cicd.yml
config/: paths.py
notebooks/: Import_data_from_HuggingFace.ipynb
notebooks/EDA/: frenchmedmcqa_analysis.ipynb  mediqal_analysis.ipynb  medquad_analysis.ipynb  resultat_après entrainement_ds_mistral.md  results_presidio_analysis.md  sft_dataset_analysis.ipynb  ultramedical_analysis.ipynb
notebooks/training_experiment/: training_dpo.ipynb  training_sft.ipynb
scripts/: identify_champions.py
src/api/: main.py  schemas.py
src/api/services/: inference.py
src/processing/: anonymisation.py  frenchmedmcqa_cleaning.py  mediqal_cleaning.py  medquad_cleaning.py  triage_augmentation.py  ultramed_cleaning.py  utils_cleaning.py
src/processing/dpo_dataset/: generate_dpo_dataset.py  split_dpo_dataset.py
src/processing/sft_dataset/: generate_sft_dataset.py  split_sft_dataset.py
src/training/: generate_model_for_deployment.py  train_dpo.py  train_sft.py  utils_training.py
tests/: conftest.py
tests/integration/: conftest.py  test_generate.py  test_health.py  test_middleware.py
tests/metrics/: benchmark_latency.py
tests/smoke/: test_docker_build.py
tests/unit/: test_logger.py  test_paths.py  test_schemas.py
