[project]
name = "fine-tuning-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "gcsfs>=2026.2.0",
    "google-cloud-storage>=3.10.1",
    "ipykernel==6.29.5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
]
