[project]
name = "fine-tuning-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "gcsfs>=2026.2.0",
    "google-cloud-storage>=3.10.1",
    "ipykernel==6.29.5",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "mlflow>=3.12.0",
    "pandas>=2.2.0,<3",
    "peft>=0.19.1",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.4",
    "trl>=1.3.0",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "dvc-gs>=3.0.2",
]
